css/style.css
/* ... */
.sticky-mobile {
  background: rgba(10,6,6,.7);
  color: #999;
  position: fixed;
  border-image: url(../img/menu-border.svg) 45 0 0 0;
  border-top: 10px solid transparent;
  border-image-repeat: stretch;
  bottom: 0;
}
.sticky-nav-button {
  background: rgba(10,6,6,.7);
  box-shadow: 1px 1px 1px 3px #999;
  position: fixed;
  top: 0;
  width: 20%;
  z-index: 80;
}

/*Header Styling
==============================================*/
.header-overflow {
  position: relative;
  width: 100%;
  overflow-x: hidden;
}
.city-background {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: url('../img/city.png');
  background-position: center;
  background-size: 40%;
  width: 2000px; 
  padding-right: 50%;
  z-index: 82;
  -webkit-animation: scroll 50s infinite alternate ease-in-out;
    animation: scroll 50s infinite alternate ease-in-out;
}
.logo-text {
  position: absolute;
  top: 7.4rem; left: 0px;
}
.logo-text h1 {
  font-size: 5rem;
  line-height: .7;
  margin: 0;
}
.logo-container {
  position: relative;
}
.logo-background {
  background:  rgb(34,34,34); 
  background:  rgba(34,34,34,0.55);
  -webkit-clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
    clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
  display: none;
  position: absolute;
  top: 20px; right: 0; bottom: 0; left: 0;
  z-index: 98;
  -webkit-filter: blur(5px);
    -moz-filter: blur(5px);
    -o-filter: blur(5px);
    filter: blur(5px);
}
.logo {
  position: relative;
  z-index: 99;
}
a.logo,
.logo-background {
  margin: 0 auto;
  padding-top: 20px;
  padding-bottom: 20px;
  max-width: 350px;
  text-align: center;
 }
 .logo img {
  width: 100%;
  z-index: 99;
  
}
.mobile-header {
   background-color: rgba(34,34,34,0.55); 
  z-index: 82;
}
.mobile-logo {
  margin: 3px 0 0 3px;
  position: relative;
  color: #999;
  width: 80%; height: auto;
    padding-top: .5rem;  
  float: right;
  font-size: 1rem;
  font-family: 'destroyregular';
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  text-align: center;
  z-index: 83;

}

/*General Image Styles
==============================================*/
.overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: url('../img/pattern2.png') repeat top left;
  opacity: .7;
  /* -webkit-animation: pulse 2s infinite alternate;
    animation: pulse 2s infinite alternate; */
  z-index: 75;  
}
.img-shadow {
  box-shadow: 1px 1px 5px 1px black;
}

/*About section
=============================================*/
.about {
  padding: 0;
}
.background,
.about-background {
  background: url('../img/selfie.jpeg')no-repeat;
  background-size: cover;
  width: 100%;
  background-position: right;
  -webkit-animation: shift 1s 3 alternate-reverse;
    animation: shift 1s ease-in;  
}
.background {
  z-index: 2;
}
.about-background {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 97;
  -webkit-filter: blur(10px);
    -moz-filter: blur(10px);
    -ms-filter: blur(10px);
    -o-filter: blur(10px);
    filter: blur(10px);  
  
}
.about-container {
  position: relative;
  width: 100%;
}
.intro {
  color: whitesmoke;
  position:relative;
  margin: 0 0 0 50%;
  padding: 10px;
  width: 50%;
  background:  rgb(34,34,34); /* for IE */
  background: rgba(34,34,34,0.75);
  z-index: 98;
  -webkit-animation: opaque 5s ease;
    animation: opaque 5s ease;
  
}

/*Portfolio section
=============================================*/

.portfolio-content {
  margin-bottom: 10%;
}
.site-one-photo {
  background: url('../img/alan_site.jpg') no-repeat top;
  background-size: 100% auto;
  width: 100%;
  padding-bottom: 50%;
  position: relative;
}
.site-two-photo {
	background: url('../img/herzog_site.jpg') no-repeat top;
  background-size: 100% auto;
  width: 100%;
  padding-bottom: 50%;
  position: relative;
}
.site-one-info,
.site-two-info  {
	background: dimgrey;
  margin: 0 auto;
  width: 90%;
}

/*Photo Page
=============================================*/

.arrowLeft,
.arrowRight{
  cursor: pointer;
  width: 20%;
  margin: 0 5%;
  max-width: 90px;
  z-index: 99;
}
.photo-flex {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
}
.photoBox {
  width: 100%; max-width: 900px;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}
.photoFrame {
  background-repeat: no-repeat;
  background-position: center;
  background-size: contain;
  margin: 0 auto;
  width: 100%; 
  max-width: 900px;
  padding-bottom: 75%;
  position: relative;
}
/*settings for Firefox browsers*/
@-moz-document url-prefix() {
.arrowLeft,
.arrowRight {
  margin-top: 40px;
}
.photoFrame {
    height: 300px;
    padding-bottom: 100%;
  }
}
.photoSelector {
  display: -webkit-inline-box;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
      -ms-flex-direction: row;
          flex-direction: row;
  -webkit-box-pack:center;
      -ms-flex-pack:center;
          justify-content:center;
  width: 100%;
  height: 40px;
}
/* ... */

